# bar

./: .gitignore  Anchor.toml  Cargo.toml  LorawanConnection_README.md  README.md  copy_types.sh  package.json  security.json
.github/workflows/: anchortest.yaml  devnet.yaml  mainnet.yaml
app/: .env.example  package-lock.json  package.json  tailwind.config.js
app/app/: head.tsx  layout.tsx  page.tsx
app/app/bar/[barName]/: page.tsx
app/app/store/[storeName]/: page.tsx
app/pages/api/: let_me_buy.json  transaction.ts  webhooktg.ts
app/src/: Wallet.tsx
app/src/components/: PayQR.tsx  PurchaseNotification.tsx  Receipts.tsx
app/src/types/: receipts_types.ts  solana_bar.ts
app/src/util/: const.ts  koraUtils.ts  let_me_buy.json  let_me_buy.ts  let_me_pay.json  let_me_pay.ts  solana_bar.json  solana_bar.ts
programs/let-me-buy/: Cargo.toml
programs/let-me-buy/src/: lib.rs
programs/let-me-pay/: Cargo.toml
programs/let-me-pay/src/: lib.rs
programs/solana-bar/: Cargo.toml
programs/solana-bar/src/: lib.rs
raspberry/: README.md  bar-install.sh  bar_config.example.txt  bar_config.txt  package-lock.json  package.json  wifi_config.example.txt  wifi_config.txt
raspberry/bar/: bar-service.sh  package.json
raspberry/bar/src/: bar.ts  servo_test.ts
raspberry/src/: bar.ts  let_me_buy.json  let_me_buy.ts  let_me_pay.json  let_me_pay.ts  solana_bar.json  solana_bar.ts
raspberry/wifiSetup/: README.md
tests/: let_my_pay_test.ts  solana_bar_test.ts  tokSEbdQMxeCZx5GYKR32ywbax6VE4twyqJCYnEtAaC.json
wifiSetup/: wifi_config.txt
(+2 files in other folders)
