[workspace]
members = [
    "programs/*"
]
resolver = "2"

[patch.crates-io]
ahash = { git = "https://github.com/tkaitchuck/ahash", tag = "v0.7.6" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
